--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "textlint-tester": "^2.0.0"
   },
   "dependencies": {
+    "debug": "^2.2.0",
     "kuromojin": "^1.3.2",
     "morpheme-match": "^1.0.1",
     "sentence-splitter": "^2.0.0",
