--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prepublish": "npm run --if-present build"
   },
   "keywords": [
-    "textlint"
+    "textlint",
+    "textlintrule"
   ],
   "repository": {
     "type": "git",
