--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "src/"
   ],
   "name": "textlint-rule-no-duplicated-bunmatsu-hyougen",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "同じ文末表現が連続しているのを見つけるtextlintルール",
   "main": "lib/textlint-rule-no-duplicated-bunmatsu-hyougen.js",
   "scripts": {
-    "test": "mocha test/",
-    "build": "NODE_ENV=production babel src --out-dir lib --source-maps",
-    "watch": "babel src --out-dir lib --watch --source-maps",
+    "test": "textlint-scripts test",
+    "build": "textlint-scripts build",
+    "watch": "textlint-scripts build --watch",
     "prepublish": "npm run --if-present build"
   },
   "keywords": [
@@ -32,21 +32,15 @@
   },
   "homepage": "https://github.com/textlint-ja/textlint-rule-no-duplicated-bunmatsu-hyougen",
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-jsdoc-to-assert": "^4.0.0",
-    "babel-preset-power-assert": "^1.0.0",
-    "babel-register": "^6.14.0",
-    "mocha": "^3.0.2",
-    "power-assert": "^1.4.1",
-    "textlint-tester": "^2.0.0"
+    "textlint-scripts": "^2.1.0"
   },
   "dependencies": {
-    "debug": "^2.2.0",
+    "@textlint/regexp-string-matcher": "^1.0.2",
+    "debug": "^4.1.1",
     "kuromojin": "^1.3.2",
     "morpheme-match": "^1.0.1",
-    "sentence-splitter": "^2.0.0",
+    "sentence-splitter": "^3.0.11",
     "textlint-util-to-string": "^2.0.1",
-    "unist-util-filter": "^0.2.1"
+    "unist-util-filter": "^1.0.0"
   }
 }
